[package]
name = "config_press"
version = "0.1.0"
authors = ["sam-plankis <sam-plankis@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "0.4"
env_logger = "0.8.3"
indexmap = "1.6.2"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }